Fix for z-Index

--- a/public/less/designview.less
+++ b/public/less/designview.less
@@ -736,12 +736,3 @@ input.daystosign {
     float:left;
   }
 }
-
-
-.text-field-placement-setter-field-selector {
-    z-index: 1000;
-}
-
-.signature-field-placement-setter-field-selector {
-    z-index: 1000;
-}
